Fix some spacing issues

--- a/index.css
+++ b/index.css
@@ -6,26 +6,26 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	height: 50px;
-	width: 500px;
 }
 #content {
 	background-color: #FFFFFF;
 	height: auto;
-	width: 1000px;
+	max-width: 1000px;
+	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 10px
+	padding: 10px;
 }
 p {
-	font-family:Ubuntu,Calibri,Arial,sans-serif;
+	font-family: Ubuntu, Calibri, Arial, sans-serif;
 	text-align: center;
 }
 h1 {
-	font-family:Ubuntu,Calibri,Arial,sans-serif;
+	font-family: Ubuntu, Calibri, Arial, sans-serif;
 	text-align: center
 }
 h2 {
-	font-family:Ubuntu,Calibri,Arial,sans-serif;
+	font-family: Ubuntu, Calibri, Arial, sans-serif;
 	text-align: center;
 	text-decoration: underline;
 }
